# stockpile-lite

./: Cargo.toml  README.md
.github/workflows/: rust.yml
scripts/: update-solana-dependencies.sh
sdk/: .gitignore  .solitarc.js  package.json  tsconfig.json
sdk/idl/: stockpile_lite.json
sdk/src/: index.ts
src/: error.rs  lib.rs  processor.rs  util.rs
src/instructions/: accept_participant.rs  contribute_with_vote.rs  create_pool.rs  create_vault.rs  join_pool.rs  join_pool_with_token.rs  mod.rs  refresh.rs
src/state/: mod.rs  participant.rs  pool.rs  pool_result.rs  vault.rs  vote_table.rs
src/utils/: mod.rs  validate_indicies.rs
src/utils/math/: calc_participant_result.rs  calc_pool_result.rs  calc_sum_sqrt.rs  mod.rs
src/utils/validation/: mod.rs  validate_ata.rs  validate_is_signer.rs  validate_minimum_balance.rs  validate_participant.rs
